# tailwind-vite-jest

./: .firebaserc  .gitignore  firebase.json  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.firebase/: hosting.ZGlzdA.cache  hosting.ZnJvbnQvZGlzdA.cache  hosting.ZnJvbnRcZGlzdA.cache  hosting.cGFja2FnZXNcZnJvbnRcZGlzdA.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
crate/: Cargo.toml  index.html
crate/src/: Naive.rs  Wordle.rs  hilbert.rs  lib.rs  mandelbrot.rs
crate/src/wordleMod/: Wordle.rs
demo/: Cargo.toml
demo/src/: main.rs
front/: .babelrc  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
front/solidRender/: CustomRender.ts  jsx-runtime.ts
front/src/: App.vue  env.d.ts  globals.d.ts  index.css  main.ts
front/src/TippyWrapper/: TippyWrap.vue
front/src/benchmarks/: toBase64.ts  toBase64Test.test.ts
front/src/components/: BlogFormat.vue  BtnTest.vue  Button.vue  CodeFormat.vue  Experience.vue  NavBar.vue  ProjectPresentation.vue  TablePerformance.vue  Tag.vue  TagList.vue  codeStyle.css
front/src/marverick/: CNode.ts  Node2D.ts  Test.vue  builder.test.ts  marverick.test.ts  segment-tree.ts
front/src/pages/: Animation.vue  BackGround.vue  BallAnimation.vue  Base64.vue  Benchmark.vue  CV.vue  CanvasGame.vue  DragTest.vue  GPGPU.vue  Gravity.vue  Home.vue  Layers.vue  LibTest.vue  LotsOfSquares.vue  LuaEmb.vue  Marverick.vue  Performance.vue  Rough.vue  RoughRender.vue  SIMDRasterization.vue  Scroll.vue  ScrollCompare.vue  SimpleRenderer.vue  Solid.vue  TestWorkers.vue  TextQualityTest.vue  TippyTest.vue  VueRenderer2D.vue  WasmChart.vue
front/src/pixijs/: pixi.vue
front/src/rough/: CandleScaleX.ts  interfaces.ts  plotR.ts  vueStretch.test.ts
front/src/solid/: Hello.tsx
front/src/stores/: testStore.ts
front/src/unitFormation/: UnitFormation.test.ts  UnitFormation.ts
front/src/utils/: LinScale.ts  Vec2.ts  benchMark.ts  math.test.ts  math.ts  rxjsUtils.ts
front/src/vueRenderer/: Arrow.vue  BenchAgainst.ts  CartesianCharts.ts  GLineComp.vue  GScale.vue  GStage.vue  LinePlot.vue  PIXIRender.ts  RealRenderer.ts  Rect.vue  RootTransformer.ts  ScaleComp.vue  Stage.vue  SuperReactive.test.ts  SuperReactive.ts  TestRender.vue  UseDraw.ts  WorkerExpose.ts  componentTypes.ts  interfaces.ts
front/src/webgl2/: GPGPU.ts  fragmentHello.glsl  hello.ts  myUtils.ts  vertexHello.glsl  webglUtils.js
front/src/webgpu/: BallsSimulation.ts  ComputeShader.ts  ballsDraw.ts  hello.ts  shaders.ts  triangle.ts
front/src/wordle/: Solver.vue  WordleMask.vue
incremental_draw/: Cargo.toml  package.json
incremental_draw/src/: anchors_test.rs  chart_core.rs  chart_things.rs  chart_to_command.rs  chart_with_leptos.rs  color_things.rs  layout.rs  leptos_things.rs  lib.rs  main.rs  timescale.rs  transitions.rs
pixi-vue/: package-lock.json  package.json  tsconfig.json  vite.config.ts
pixi-vue/src/: App.vue  lib.ts  main.ts  style.css
pixi-vue/tests/: layoutTest.test.ts
raytracer/: Cargo.toml  index.html  index.js  package.json
raytracer/src/: PointVec.rs  canvas.rs  colors.rs  lib.rs  main.rs
raytracer/src/math/: matrices.rs  point_vec.rs
raytracer/src/rasterizer/: mod.rs  triangle_rasterizer.rs
raytracer/src/tracer/: Sphere.rs  canvas.rs  colors.rs  matrices.rs  mod.rs  point_vec.rs  ray.rs  transformable.rs
rust/: Cargo.toml  index.ts  package.json
rust/src/: euler.rs  lib.rs  mandelbrot.rs  my_stupid_float.rs
rust/src/particles/: euler.rs  mod.rs
rust/src/wordleMod/: Wordle.rs  words.txt
src/: App.vue  env.d.ts  main.ts
src/components/: AnimationTest.vue  BtnTest.vue  Grid.vue  Histogram.vue  TestVModel.vue
src/domain/: histogramGen.test.ts  histogramGen.ts
src/mandelbrot/: mdSet.ts
src/menu/: MyOption.vue  RecursiveMenu.vue  SelectThings.ts  interfaces.ts  utils.test.ts  utils.ts
src/pages/: BackGround.vue  CV.vue  Hilbert.vue  Home.vue  QuickMenu.vue  QuickTest.vue  Rough.vue  Set.vue  Tests.vue
src/pixijs/: Chart.test.ts  Chart.ts  dragTest.ts  gpgpu.ts  pixi.vue  pixiTable.ts  shaders.ts
src/renderer/: customRenderer.ts  tsconfig.json
src/rough/: helpers.ts  plotR.ts  vueStretch.test.ts
src/rxjs/: PromiseAPI.ts
src/stores/: storeUtils.ts  testStore.ts
src/validation/: DeepMerge.test.ts  Validator.test.ts  myVue.test.ts
src/webgl2/: hello.ts  varyings.ts  vertexHello.glsl
src/webgpu/: hello.ts
src/wordle/: Solver.vue  Wordle.vue
src/workers/: ProxyWorker.test.ts  ProxyWorker.ts  interfaces.ts
state_machine/: Cargo.toml
state_machine/src/: local_messager.rs  login_machine.rs  main.rs  messager_things.rs  tui_case.rs
syncjs/: package-lock.json  package.json  tsconfig.json  vite.config.ts
syncjs/src/: MessagesTest.ts  TestWorker.ts  example.ts  lib.ts  main.ts  style.css
tests/: hello.test.ts
trunk/: Cargo.toml  index.html  rust-analyzer.toml
trunk/.cargo/: config.toml
trunk/benches/: my_bench.rs
trunk/src/: book_things.rs  extrernal_js.rs  leptosComp.rs  leptos_example.rs  lib.rs  main.rs  my_sigs.rs  sycamore_example.rs
trunk/src/my_sigs/: builder.rs  computed.rs  sig_traits.rs  signal.rs
wgpu/: Cargo.toml  index.html
wgpu/src/: lib.rs  main.rs
(+146 files in other folders)
