[package]
edition = "2021"
name = "wasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "wasm"

[dependencies]
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
wasm-opt = ['-O4', '-g']

[[bin]]
name = "wasm_bin"
