[package]
edition = "2021"
name = "incremental_draw"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version = "0.4.2", features = ["csr"]}
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
version = "0.3.4"
