[package]
edition = "2021"
name = "incremental_draw"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
futures = "0.3.28"
js-sys = "0.3.64"
leptos = {version = "0.4.2", features = ["csr"]}
segment-tree = "2.0.0"
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'Performance',
]
version = "0.3.4"

[lib]
crate-type = ["cdylib", "rlib"]

[build]
target = "wasm32-unknown-unknown"
