[package]
edition = "2021"
name = "raytracer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = {version = "0.24.0", optional = true}
serde = "1.0.193"
wasm-bindgen = "0.2.89"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minifb = "0.24.0"

[lib]
crate-type = ["cdylib", "rlib"]
