[package]
edition = "2021"
name = "wasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "wasm"

[dependencies]
nalgebra = "0.31.1"
serde = {version = "1.0", features = ["derive"]}
space-time = "0.2.0"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
wasm-bindgen-test = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"

[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
# rust-flags = "-C target-feature=+simd128"
wasm-opt = ['-O4', '-g']

[[bin]]
name = "wasm_bin"

[build]
rust-flags = "-C target-feature=+simd128"
wasm-opt = ['-O4', '-g']
