[package]
edition = "2021"
name = "state_machine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
tokio = {version = "1.35.1", features = ["full"]}
tokio-stream = "0.1.14"
