[package]
edition = "2021"
name = "trunk"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
sycamore = "0.8"
wasm-bindgen = "0.2.83"
web-sys = {version = "0.3", features = ["Window", "Document", "HtmlElement", "Node", "Text"]}
