[package]
edition = "2021"
name = "trunk"
version = "0.1.0"

[dependencies]
console_error_panic_hook = "0.1"
leptos = "0.2.5"
# tokio = {version = "1.24.1", features = ["macros", "rt"]}
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = {version = "0.3", features = ["Window", "Document", "HtmlElement", "Node", "Text", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d"]}

[toolchain]
channel = "nightly"

[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
# wasm-opt = ['-O4', '-g']

[dev-dependencies]
criterion = "0.4"
rand = "0.8.5"

[[bench]]
harness = false
name = "my_bench"
