[package]
edition = "2021"
name = "pong"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tutorial1-window"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
wgpu = "0.15"
winit = "0.27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.30"
web-sys = {version = "0.3.53", features = [
  "Document",
  "Window",
  "Element",
]}
wgpu = {version = "0.13", features = ["webgl"]}
